force-app/main/default/objects/ClusterMember__c/ClusterMember__c.object-meta.xml
<CustomObject>
    <description>Membros = clientes pertencentes ao cluster</description>
    <label>Membros do Cluster</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Nome dos Membros do Cluster</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClusterMembers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>