force-app/main/default/objects/ClusterMember__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ClusterMembers</relationshipLabel>
    <relationshipName>Membros_do_Cluster</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>