force-app/main/default/objects/ClusterMember__c/fields/BillingAccountsAssociated__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountsAssociated__c</fullName>
    <label>Conta(s) de Faturamento Associada(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>