force-app/main/default/objects/ClusterMember__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Cluster</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>ClusterMembers</relationshipLabel>
    <relationshipName>ClusterMember</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>