force-app/main/default/objects/ClusterMember__c/fields/ClusterName__c.field-meta.xml
<CustomField>
    <fullName>ClusterName__c</fullName>
    <formula>Cluster__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do Cluster</label>
    <type>Text</type>
</CustomField>