force-app/main/default/objects/ClusterMember__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comunicado</label>
    <type>Checkbox</type>
</CustomField>