force-app/main/default/objects/ClusterMember__c/fields/DeleteRecord__c.field-meta.xml
<CustomField>
    <fullName>DeleteRecord__c</fullName>
    <formula>OR(
     Communication__c = true, 
				 Validity__c &lt; NOW()
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DeleteRecord</label>
    <type>Checkbox</type>
</CustomField>