force-app/main/default/objects/ClusterMember__c/fields/Inform__c.field-meta.xml
<CustomField>
    <fullName>Inform__c</fullName>
    <formula>&quot;Informar Contato = &quot; &amp; IF (Cluster__r.IsContact__c &lt;&gt; false, &apos;Sim&apos;, &apos;Não&apos;) &amp; BR() &amp;
&quot;Informar Titular = &quot; &amp; IF (Cluster__r.IsHolder__c &lt;&gt; false, &apos;Sim&apos;, &apos;Não&apos;) &amp; BR() &amp;
&quot;Informar Terceiro = &quot; &amp; IF (Cluster__r.IsTerceiro__c &lt;&gt; false, &apos;Sim&apos;, &apos;Não&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informar</label>
    <type>Text</type>
</CustomField>