force-app/main/default/objects/ClusterMember__c/fields/IsContactClusterMember__c.field-meta.xml
<CustomField>
    <fullName>IsContactClusterMember__c</fullName>
    <formula>Cluster__r.IsContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informar Contato?</label>
    <type>Checkbox</type>
</CustomField>