force-app/main/default/objects/ClusterMember__c/fields/IsHolderClusterMember__c.field-meta.xml
<CustomField>
    <fullName>IsHolderClusterMember__c</fullName>
    <formula>Cluster__r.IsHolder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informar Titular?</label>
    <type>Checkbox</type>
</CustomField>