force-app/main/default/objects/ClusterMember__c/fields/IsTerceiroClusterMember__c.field-meta.xml
<CustomField>
    <fullName>IsTerceiroClusterMember__c</fullName>
    <formula>Cluster__r.IsTerceiro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informar Terceiro?</label>
    <type>Checkbox</type>
</CustomField>