force-app/main/default/objects/ClusterMember__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>Cluster__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>