force-app/main/default/objects/ClusterMember__c/fields/PriorityNumber__c.field-meta.xml
<CustomField>
    <fullName>PriorityNumber__c</fullName>
    <label>PriorityNumber</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>