force-app/main/default/objects/ClusterMember__c/fields/RecordLink__c.field-meta.xml
<CustomField>
    <fullName>RecordLink__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ClusterMember__c/&quot; &amp; Id &amp;&quot;/view?ws=%2Flightning%2Fr%2FAccount%2F&quot; &amp; AccountId__c   &amp; &quot;%2Fview&quot; ,  Cluster__r.Name , &quot;_BLANK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordLink</label>
    <type>Text</type>
</CustomField>