force-app/main/default/objects/ClusterMember__c/fields/Validity__c.field-meta.xml
<CustomField>
    <fullName>Validity__c</fullName>
    <description>Campo de validade do registro.</description>
    <label>Validade</label>
    <type>DateTime</type>
</CustomField>