force-app/main/default/objects/ClusterMember__c/recordTypes/AutomaticScheduledCluster.recordType-meta.xml
<RecordType>
    <fullName>AutomaticScheduledCluster</fullName>
    <active>true</active>
    <description>Cluster com conclusão agendada</description>
    <label>Conclusão Agendado</label>
</RecordType>