force-app/main/default/objects/ClusterMember__c/recordTypes/ClusterAtendimento.recordType-meta.xml
<RecordType>
    <fullName>ClusterAtendimento</fullName>
    <active>true</active>
    <description>RT para diferenciar clientes VIP e não exibir o botão &quot;Comunicado&quot;.</description>
    <label>Cluster Atendimento</label>
</RecordType>