force-app/main/default/objects/ClusterMember__c/recordTypes/ClusterRetencao.recordType-meta.xml
<RecordType>
    <fullName>ClusterRetencao</fullName>
    <active>true</active>
    <description>Cluster para Retenção, voltado para utilização do mural do Front</description>
    <label>Cluster Retenção</label>
</RecordType>