force-app/main/default/objects/ClusterMember__c/recordTypes/ManualCloseCluster.recordType-meta.xml
<RecordType>
    <fullName>ManualCloseCluster</fullName>
    <active>true</active>
    <description>Cluster com conclusão manual</description>
    <label>Conclusão Manual</label>
</RecordType>